// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostCodeBlock - Snapshots > matches snapshot for JavaScript code block 1`] = `
<div
  class="max-w-69.5 xsm:max-w-72 sm:max-w-120 md:max-w-168 lg:max-w-130 xl:max-w-175"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    class="flex-row items-center justify-between gap-x-2 rounded-t-md bg-gray-600 px-4"
    data-testid="container"
  >
    <span
      data-size="sm"
      data-testid="typography"
    >
      javascript
    </span>
    <button
      class="hover:bg-transparent hover:opacity-50"
      data-size="sm"
      data-testid="copy-button"
      data-variant="ghost"
    >
      <svg
        data-testid="clipboard-icon"
        width="16"
      >
        Clipboard
      </svg>
      <span
        data-size="sm"
        data-testid="typography"
      >
        Copy
      </span>
    </button>
  </div>
  <div
    style="background: rgb(40, 44, 52); color: rgb(171, 178, 191); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: \\"Fira Code\\", \\"Fira Mono\\", Menlo, Consolas, \\"DejaVu Sans Mono\\", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1em; margin: 0px; overflow: auto; border-radius: 0;"
  >
    <code
      class="language-javascript"
      style="white-space: pre; background: rgb(40, 44, 52); color: rgb(171, 178, 191); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: \\"Fira Code\\", \\"Fira Mono\\", Menlo, Consolas, \\"DejaVu Sans Mono\\", monospace; direction: ltr; text-align: left; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none;"
    >
      <span
        class="token"
        style="color: rgb(198, 120, 221);"
      >
        const
      </span>
      <span>
         greeting 
      </span>
      <span
        class="token"
        style="color: rgb(97, 175, 239);"
      >
        =
      </span>
      <span>
         
      </span>
      <span
        class="token"
        style="color: rgb(152, 195, 121);"
      >
        "Hello World"
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        ;
      </span>
      <span>
        

      </span>
      <span />
      <span
        class="token console"
        style="color: rgb(209, 154, 102);"
      >
        console
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        .
      </span>
      <span
        class="token method property-access"
        style="color: rgb(97, 175, 239);"
      >
        log
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        (
      </span>
      <span>
        greeting
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        )
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        ;
      </span>
    </code>
  </div>
</div>
`;

exports[`PostCodeBlock - Snapshots > matches snapshot for Python code block 1`] = `
<div
  class="max-w-69.5 xsm:max-w-72 sm:max-w-120 md:max-w-168 lg:max-w-130 xl:max-w-175"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    class="flex-row items-center justify-between gap-x-2 rounded-t-md bg-gray-600 px-4"
    data-testid="container"
  >
    <span
      data-size="sm"
      data-testid="typography"
    >
      python
    </span>
    <button
      class="hover:bg-transparent hover:opacity-50"
      data-size="sm"
      data-testid="copy-button"
      data-variant="ghost"
    >
      <svg
        data-testid="clipboard-icon"
        width="16"
      >
        Clipboard
      </svg>
      <span
        data-size="sm"
        data-testid="typography"
      >
        Copy
      </span>
    </button>
  </div>
  <div
    style="background: rgb(40, 44, 52); color: rgb(171, 178, 191); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: \\"Fira Code\\", \\"Fira Mono\\", Menlo, Consolas, \\"DejaVu Sans Mono\\", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1em; margin: 0px; overflow: auto; border-radius: 0;"
  >
    <code
      class="language-python"
      style="white-space: pre; background: rgb(40, 44, 52); color: rgb(171, 178, 191); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: \\"Fira Code\\", \\"Fira Mono\\", Menlo, Consolas, \\"DejaVu Sans Mono\\", monospace; direction: ltr; text-align: left; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none;"
    >
      <span
        class="token"
        style="color: rgb(198, 120, 221);"
      >
        def
      </span>
      <span>
         
      </span>
      <span
        class="token"
        style="color: rgb(97, 175, 239);"
      >
        hello
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        (
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        )
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        :
      </span>
      <span>
        

      </span>
      <span>
            
      </span>
      <span
        class="token"
        style="color: rgb(198, 120, 221);"
      >
        print
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        (
      </span>
      <span
        class="token"
        style="color: rgb(152, 195, 121);"
      >
        "Hello, World!"
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        )
      </span>
      <span>
        

      </span>
      <span>
            
      </span>
      <span
        class="token"
        style="color: rgb(198, 120, 221);"
      >
        return
      </span>
      <span>
         
      </span>
      <span
        class="token"
        style="color: rgb(209, 154, 102);"
      >
        True
      </span>
    </code>
  </div>
</div>
`;

exports[`PostCodeBlock - Snapshots > matches snapshot for TypeScript code block 1`] = `
<div
  class="max-w-69.5 xsm:max-w-72 sm:max-w-120 md:max-w-168 lg:max-w-130 xl:max-w-175"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    class="flex-row items-center justify-between gap-x-2 rounded-t-md bg-gray-600 px-4"
    data-testid="container"
  >
    <span
      data-size="sm"
      data-testid="typography"
    >
      typescript
    </span>
    <button
      class="hover:bg-transparent hover:opacity-50"
      data-size="sm"
      data-testid="copy-button"
      data-variant="ghost"
    >
      <svg
        data-testid="clipboard-icon"
        width="16"
      >
        Clipboard
      </svg>
      <span
        data-size="sm"
        data-testid="typography"
      >
        Copy
      </span>
    </button>
  </div>
  <div
    style="background: rgb(40, 44, 52); color: rgb(171, 178, 191); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: \\"Fira Code\\", \\"Fira Mono\\", Menlo, Consolas, \\"DejaVu Sans Mono\\", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1em; margin: 0px; overflow: auto; border-radius: 0;"
  >
    <code
      class="language-typescript"
      style="white-space: pre; background: rgb(40, 44, 52); color: rgb(171, 178, 191); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: \\"Fira Code\\", \\"Fira Mono\\", Menlo, Consolas, \\"DejaVu Sans Mono\\", monospace; direction: ltr; text-align: left; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none;"
    >
      <span
        class="token"
        style="color: rgb(198, 120, 221);"
      >
        interface
      </span>
      <span>
         
      </span>
      <span
        class="token"
        style="color: rgb(209, 154, 102);"
      >
        User
      </span>
      <span>
         
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        {
      </span>
      <span>
        

      </span>
      <span>
          name
      </span>
      <span
        class="token"
        style="color: rgb(97, 175, 239);"
      >
        :
      </span>
      <span>
         
      </span>
      <span
        class="token"
        style="color: rgb(152, 195, 121);"
      >
        string
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        ;
      </span>
      <span>
        

      </span>
      <span>
          age
      </span>
      <span
        class="token"
        style="color: rgb(97, 175, 239);"
      >
        :
      </span>
      <span>
         
      </span>
      <span
        class="token"
        style="color: rgb(152, 195, 121);"
      >
        number
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        ;
      </span>
      <span>
        

      </span>
      <span />
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        }
      </span>
    </code>
  </div>
</div>
`;

exports[`PostCodeBlock - Snapshots > matches snapshot for code block with single line 1`] = `
<div
  class="max-w-69.5 xsm:max-w-72 sm:max-w-120 md:max-w-168 lg:max-w-130 xl:max-w-175"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    class="flex-row items-center justify-between gap-x-2 rounded-t-md bg-gray-600 px-4"
    data-testid="container"
  >
    <span
      data-size="sm"
      data-testid="typography"
    >
      rust
    </span>
    <button
      class="hover:bg-transparent hover:opacity-50"
      data-size="sm"
      data-testid="copy-button"
      data-variant="ghost"
    >
      <svg
        data-testid="clipboard-icon"
        width="16"
      >
        Clipboard
      </svg>
      <span
        data-size="sm"
        data-testid="typography"
      >
        Copy
      </span>
    </button>
  </div>
  <div
    style="background: rgb(40, 44, 52); color: rgb(171, 178, 191); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: \\"Fira Code\\", \\"Fira Mono\\", Menlo, Consolas, \\"DejaVu Sans Mono\\", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1em; margin: 0px; overflow: auto; border-radius: 0;"
  >
    <code
      class="language-rust"
      style="white-space: pre; background: rgb(40, 44, 52); color: rgb(171, 178, 191); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: \\"Fira Code\\", \\"Fira Mono\\", Menlo, Consolas, \\"DejaVu Sans Mono\\", monospace; direction: ltr; text-align: left; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none;"
    >
      <span
        class="token"
        style="color: rgb(198, 120, 221);"
      >
        fn
      </span>
      <span>
         
      </span>
      <span
        class="token function-definition"
        style="color: rgb(97, 175, 239);"
      >
        main
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        (
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        )
      </span>
      <span>
         
      </span>
    </code>
  </div>
</div>
`;

exports[`PostCodeBlock - Snapshots > matches snapshot for code block with trailing newline stripped 1`] = `
<div
  class="max-w-69.5 xsm:max-w-72 sm:max-w-120 md:max-w-168 lg:max-w-130 xl:max-w-175"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    class="flex-row items-center justify-between gap-x-2 rounded-t-md bg-gray-600 px-4"
    data-testid="container"
  >
    <span
      data-size="sm"
      data-testid="typography"
    >
      go
    </span>
    <button
      class="hover:bg-transparent hover:opacity-50"
      data-size="sm"
      data-testid="copy-button"
      data-variant="ghost"
    >
      <svg
        data-testid="clipboard-icon"
        width="16"
      >
        Clipboard
      </svg>
      <span
        data-size="sm"
        data-testid="typography"
      >
        Copy
      </span>
    </button>
  </div>
  <div
    style="background: rgb(40, 44, 52); color: rgb(171, 178, 191); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: \\"Fira Code\\", \\"Fira Mono\\", Menlo, Consolas, \\"DejaVu Sans Mono\\", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1em; margin: 0px; overflow: auto; border-radius: 0;"
  >
    <code
      class="language-go"
      style="white-space: pre; background: rgb(40, 44, 52); color: rgb(171, 178, 191); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: \\"Fira Code\\", \\"Fira Mono\\", Menlo, Consolas, \\"DejaVu Sans Mono\\", monospace; direction: ltr; text-align: left; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none;"
    >
      <span
        class="token"
        style="color: rgb(198, 120, 221);"
      >
        package
      </span>
      <span>
         main
      </span>
    </code>
  </div>
</div>
`;

exports[`PostCodeBlock - Snapshots > matches snapshot for code with special characters 1`] = `
<div
  class="max-w-69.5 xsm:max-w-72 sm:max-w-120 md:max-w-168 lg:max-w-130 xl:max-w-175"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    class="flex-row items-center justify-between gap-x-2 rounded-t-md bg-gray-600 px-4"
    data-testid="container"
  >
    <span
      data-size="sm"
      data-testid="typography"
    >
      html
    </span>
    <button
      class="hover:bg-transparent hover:opacity-50"
      data-size="sm"
      data-testid="copy-button"
      data-variant="ghost"
    >
      <svg
        data-testid="clipboard-icon"
        width="16"
      >
        Clipboard
      </svg>
      <span
        data-size="sm"
        data-testid="typography"
      >
        Copy
      </span>
    </button>
  </div>
  <div
    style="background: rgb(40, 44, 52); color: rgb(171, 178, 191); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: \\"Fira Code\\", \\"Fira Mono\\", Menlo, Consolas, \\"DejaVu Sans Mono\\", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1em; margin: 0px; overflow: auto; border-radius: 0;"
  >
    <code
      class="language-html"
      style="white-space: pre; background: rgb(40, 44, 52); color: rgb(171, 178, 191); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: \\"Fira Code\\", \\"Fira Mono\\", Menlo, Consolas, \\"DejaVu Sans Mono\\", monospace; direction: ltr; text-align: left; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none;"
    >
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        &lt;
      </span>
      <span
        class="token"
        style="color: rgb(224, 108, 117);"
      >
        div
      </span>
      <span
        class="token"
        style="color: rgb(224, 108, 117);"
      >
         
      </span>
      <span
        class="token"
        style="color: rgb(209, 154, 102);"
      >
        class
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        =
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        "
      </span>
      <span
        class="token"
        style="color: rgb(152, 195, 121);"
      >
        container
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        "
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        &gt;
      </span>
      <span
        class="token named-entity"
        style="color: rgb(171, 178, 191); cursor: help;"
      >
        &nbsp;
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        &lt;/
      </span>
      <span
        class="token"
        style="color: rgb(224, 108, 117);"
      >
        div
      </span>
      <span
        class="token"
        style="color: rgb(171, 178, 191);"
      >
        &gt;
      </span>
    </code>
  </div>
</div>
`;

exports[`PostCodeBlock - Snapshots > matches snapshot for empty code block 1`] = `
<div
  class="max-w-69.5 xsm:max-w-72 sm:max-w-120 md:max-w-168 lg:max-w-130 xl:max-w-175"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    class="flex-row items-center justify-between gap-x-2 rounded-t-md bg-gray-600 px-4"
    data-testid="container"
  >
    <span
      data-size="sm"
      data-testid="typography"
    >
      javascript
    </span>
    <button
      class="hover:bg-transparent hover:opacity-50"
      data-size="sm"
      data-testid="copy-button"
      data-variant="ghost"
    >
      <svg
        data-testid="clipboard-icon"
        width="16"
      >
        Clipboard
      </svg>
      <span
        data-size="sm"
        data-testid="typography"
      >
        Copy
      </span>
    </button>
  </div>
  <div
    style="background: rgb(40, 44, 52); color: rgb(171, 178, 191); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: \\"Fira Code\\", \\"Fira Mono\\", Menlo, Consolas, \\"DejaVu Sans Mono\\", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1em; margin: 0px; overflow: auto; border-radius: 0;"
  >
    <code
      class="language-javascript"
      style="white-space: pre; background: rgb(40, 44, 52); color: rgb(171, 178, 191); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: \\"Fira Code\\", \\"Fira Mono\\", Menlo, Consolas, \\"DejaVu Sans Mono\\", monospace; direction: ltr; text-align: left; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none;"
    />
  </div>
</div>
`;

exports[`PostCodeBlock - Snapshots > matches snapshot for inline code 1`] = `
<code
  class="rounded border border-white/10 bg-neutral-800 px-1 font-mono text-orange-500"
>
  const x = 1;
</code>
`;

exports[`PostCodeBlock - Snapshots > matches snapshot for inline code with custom className 1`] = `
<code
  class="custom-inline rounded border border-white/10 bg-neutral-800 px-1 font-mono text-orange-500"
>
  code
</code>
`;

exports[`PostCodeBlock - Snapshots > matches snapshot for inline code with empty content 1`] = `
<code
  class="rounded border border-white/10 bg-neutral-800 px-1 font-mono text-orange-500"
/>
`;
